--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">BlogApp</string>
+    <string name="URL">http://192.168.0.104:8000/</string>
+
 </resources>
